@@ -360,5 +360,5 @@ aunque no todos. por ejemplo en +3dsk, visor format disc, pulsar en archivo-> bl
 
 -Considerar si agregar modo Flash Color
 
-north star (versión general sound) lo usa en la pantalla de inicio
+north star (versión general sound) lo usa en la pantalla de inicio. https://zxart.ee/eng/authors/t/tron-z/north-star2/
 también crime santa clause: https://spectrumcomputing.co.uk/entry/12791
