@@ -14,6 +14,7 @@ Allow save screen to bmp for most machines
 Allow hotswap to Pentagon and to Spectrum +3
 Allow hotswap from Spectrum 128 to Spectrum +3
 Improve Azimuth warning on External Audio Source Window
+Added Flash Color mode
 Allow to not save snapshot when exiting ZEsarUX
 Allow to define Left Alt, Left Ctrl, Left Shift or TAB as Joystick Fire action
 Allow to change current tape read position on Input Tape Viewer for .tap files
